--- a/index.html
+++ b/index.html
@@ -100,8 +100,7 @@
             </form>
             <div class="contact-details mt-8">
                 <p class="text-gray-700">Email: info@veagletech.com</p>
-                <p class="text-gray-700">Phone: (123) 456-7890</p>
-                <p class="text-gray-700">Address: 123 Tech Street, City, Country</p>
+                <p class="text-gray-700">Address: Canton, MI 48187, USA</p>
             </div>
         </div>
     </section>
